--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,35 @@
+# Prerequisites
+*.d
+
 # Compiled Object files
+*.slo
+*.lo
 *.o
 *.obj
+
+# Precompiled Headers
+*.gch
+*.pch
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
 
+# Fortran module files
+*.mod
+*.smod
+
 # Compiled Static libraries
+*.lai
+*.la
 *.a
 *.lib
 
 # Executables
 *.exe
-
-# DUB
-.dub
-docs.json
-__dummy.html
-docs/
-dub_init_error_log.txt
-
-# Code coverage
-*.lst
+*.out
+*.app
 
 # IntelliJ project files
 .idea
