--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,28 @@
-# Prerequisites
-*.d
-
 # Compiled Object files
-*.slo
-*.lo
 *.o
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
 # Compiled Static libraries
-*.lai
-*.la
 *.a
 *.lib
 
 # Executables
 *.exe
-*.out
-*.app
+
+# DUB
+.dub
+docs.json
+__dummy.html
+docs/
+dub_init_error_log.txt
+
+# Code coverage
+*.lst
 
 # IntelliJ project files
 .idea
